Markers being mapped.

--- a/app/templates/form.hbs
+++ b/app/templates/form.hbs
@@ -1,7 +1,1 @@
-{{ name }}
-
-<ul>
-  {{#each submissions}}
-    <li>{{ latitude }} | {{ longitude }}</li>
-  {{/each}}
-</ul>
+<div id="map-canvas" style="width: 100%; height: 100%; position: absolute"></div>
