--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,17 @@
+// APP VARIABLES AND OVERRIDES
+// ---------------------------
+
+@import "variables";
+
+
+// FOUNDATION AND ICONS
+// --------------------
+
+@import
+  "core/foundation/settings",
+  "core/foundation";
+
+
 // MAP ELEMENT
 // -----------
 
@@ -9,4 +23,16 @@
 
   width: 100%;
   height: 100%;
+
+  embed {
+    max-width: none;
+  }
+
+  img {
+    max-width: none;
+  }
+
+  object {
+    max-width: none;
+  }
 }
