--- a/app/templates/ride-detail.hbs
+++ b/app/templates/ride-detail.hbs
@@ -1,6 +1,6 @@
 <div id="modal" class="reveal-modal small" data-reveal>
   <ul>
-    {{#each controller.submissionData}}
+    {{#each model.submissionData}}
       <li>{{ field }} | {{ value }}</li>
     {{/each}}
   </ul>
