Properly loading submission data.

--- a/app/templates/ride-detail.hbs
+++ b/app/templates/ride-detail.hbs
@@ -1,7 +1,7 @@
 <div id="modal" class="reveal-modal small" data-reveal>
   <ul>
     {{#each model.submissionData}}
-      <li>{{ field }} | {{ value }}</li>
+      <li>{{ field.name }} | {{ value }}</li>
     {{/each}}
   </ul>
 </div>
