--- a/styles/variables.scss
+++ b/styles/variables.scss
@@ -1,24 +1,9 @@
-// TOOLBAR
-// -------
-
-$toolbar-width: 36px;
-
-
-// GRID
-// ----
-$grid-border-size: 1px;
-$grid-border: solid black; 
-
 // TRANSITIONS
 // -----------
 $default-transition-time: 0.25s;
 
 
-// FOUNDATION OVERRIDES
-// -------------------
-
-// TOPBAR
+// SIZING
 // ------
 
-$topbar-height: 60px;
-$topbar-link-font-size: 1.7rem;
+$baseSize: 60px;
