Initial ride claiming established.

--- a/app/templates/ride-detail.hbs
+++ b/app/templates/ride-detail.hbs
@@ -10,7 +10,7 @@
 
   <div class="row">
     <div class="medium-12 columns">
-      <button class="button expand" type="submit">Pick them up!</button>
+      <button class="button expand" {{action "claimSubmission" model}}>Pick them up!</button>
     </div>
   </div>
 </div>
