--- a/app/templates/ride-detail.hbs
+++ b/app/templates/ride-detail.hbs
@@ -1,16 +1,30 @@
-<div id="modal" class="reveal-modal small ride-details" data-reveal>
-  <div class="row">
-    <div class="medium-6 columns">{{ model.phone.value }}</div>
-    <div class="medium-6 columns">{{ model.email.value }}</div>
-  </div>
+{{#with model}}
 
-  <div class="row">
-    <div class="medium-12 columns">{{ model.message.value }}</div>
-  </div>
-
-  <div class="row">
-    <div class="medium-12 columns">
-      <button class="button expand" {{action "claimSubmission" model}}>Pick them up!</button>
+  <div id="modal" class="reveal-modal small ride-details" data-reveal>
+    <div class="row">
+      <div class="medium-6 columns">{{ phone.value }}</div>
+      <div class="medium-6 columns">{{ email.value }}</div>
     </div>
+
+    <div class="row">
+      <div class="medium-12 columns">{{ message.value }}</div>
+    </div>
+
+    {{#if beenAssigned}}
+      <div class="row">
+        <div class="medium-12 columns">
+          <a {{bind-attr href='navigateURL'}} target="_blank">
+          <button class="expand">Get me directions!</button>
+          </a>
+        </div>
+      </div>
+    {{else}}
+      <div class="row">
+        <div class="medium-12 columns">
+          <button class="expand" {{action "claimSubmission" this}}>Pick them up!</button>
+        </div>
+      </div>
+    {{/if}}
   </div>
-</div>
+
+{{/with}}
