--- a/styles/main.scss
+++ b/styles/main.scss
@@ -42,10 +42,23 @@
 // -----------------
 
 .ride-details {
+  h3 {
+    font-weight: bold;
+    text-align: center;
+  }
+
   .columns {
     height: $baseSize;
 
     padding: 0;
     margin: 10px 0;
+  }
+
+  .navigation {
+    background-color: $success-color;
+  }
+
+  .navigation:hover {
+    background-color: darken( $success-color, 11% );
   }
 }
